# xradar-desktop

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  ruff.toml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
python/: pyproject.toml  server.py
python/engine/: __init__.py  arrow_bridge.py  cloud.py  dualpol.py  exporter.py  processor.py  qc.py  reader.py  renderer.py  retrievals.py  statistics.py  temporal.py  tracking.py  volume.py
python/tests/: conftest.py  test_arrow_bridge.py  test_exporter.py  test_reader.py  test_renderer.py  test_server.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: AboutDialog.svelte  Annotations.svelte  BoxSelectTool.svelte  CloudDataPanel.svelte  CollapsiblePanel.svelte  ColorBar.svelte  ColormapEditor.svelte  CommandPalette.svelte  CrossSectionLine.svelte  CrossSectionPanel.svelte  CrossSectionViewer.svelte  DataInspector.svelte  DataTable.svelte  DiffViewer.svelte  DualPolDashboard.svelte  ExportPanel.svelte  FileTabs.svelte  GeoOverlay.svelte  HistogramChart.svelte  MapBackground.svelte  MeasureToolbar.svelte  MeasureTools.svelte  MetadataViewer.svelte  NotificationCenter.svelte  OnboardingTour.svelte  PanelManager.svelte  PerformanceMonitor.svelte  ProcessingPanel.svelte  QCPanel.svelte  RadarViewer.svelte  RadarViewer3D.svelte  ScatterPlot.svelte  SettingsDialog.svelte  ShortcutsSheet.svelte  SplitView.svelte  (+12 more)
(+23 files in other folders)
