[project]
name = "xradar-desktop-engine"
version = "0.1.0"
description = "Python sidecar engine for xradar-desktop"
requires-python = ">=3.10"
dependencies = [
    "xradar>=0.7,<1.0",
    "xarray>=2024.1,<2026.0",
    "dask[complete]>=2024.1,<2026.0",
    "datashader>=0.16,<1.0",
    "pycairo>=1.25,<2.0",
    "websockets>=12.0,<14.0",
    "pyarrow>=15.0,<19.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "fsspec>=2024.1,<2026.0",
    "s3fs>=2024.1,<2026.0",
    "pillow>=10.0,<12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
