[package]
name = "xradar-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"
rand = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "xradar-desktop"
path = "src/main.rs"
